# llm_zoomcamp

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
notebook/Homework_1_introduction/: homework.ipynb
notebook/Week1/: homework.ipynb  setup.ipynb
src/llm_zoomcamp_damon/: __init__.py
